# cpp-ml

./: .gitignore  CMakeLists.txt  README.md
dataset/: student-test-score.csv
include/: Algorithms.hpp  CSVETL.hpp  DecisionTree.hpp  DecisionTreeHandler.hpp  KNN.hpp  KNNHandler.hpp  LinearRegression.hpp  LinearRegressionHandler.hpp  LogisticRegression.hpp  LogisticRegressionHandler.hpp  MLUtils.hpp  RandomForest.hpp  RandomForestHandler.hpp
src/: Algorithms.cpp  CSVETL.cpp  DecisionTree.cpp  KNN.cpp  LinearRegression.cpp  LogisticRegression.cpp  MLUtils.cpp  RandomForest.cpp  main.cpp
